--- a/shared/openapi/core-api.yaml
+++ b/shared/openapi/core-api.yaml
@@ -165,7 +165,7 @@ paths:
           description: The authenticated session token/id
       tags:
         - Authentication
-  /event/{eventId}/interest:
+  /events/{eventId}/interest:
     post:
       summary: Make an interest submission for an event (email list)
       parameters:
@@ -231,7 +231,21 @@ paths:
       operationId: post-event-interest
       tags:
         - Event
-  /event:
+  /events:
+    get:
+      summary: Get all events
+      description: Gets only published events for normal users, and all events for superusers
+      responses:
+        '200':
+          description: 'OK: Events returned'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+      tags:
+        - Event
     post:
       summary: Create a new event
       requestBody:
@@ -242,27 +256,27 @@ paths:
               type: object
               required:
                 - name
-                - applicationOpen
-                - applicationClose
-                - startTime
-                - endTime
+                - application_open
+                - application_close
+                - start_time
+                - end_time
               properties:
                 name:
                   type: string
                   example: "Open Software Club's Workshop"
-                applicationOpen:
+                application_open:
                   type: string
                   format: date-time
                   example: 2025-08-01T08:00:00Z
-                applicationClose:
+                application_close:
                   type: string
                   format: date-time
                   example: 2025-12-01T023:59:00Z
-                timeStart:
+                start_time:
                   type: string
                   format: date-time
                   example: 2026-02-10T17:00:00Z
-                timeEnd:
+                end_time:
                   type: string
                   format: date-time
                   example: 2026-02-12T08:00:00Z
@@ -289,11 +303,14 @@ paths:
       responses:
         '201':
           description: 'OK: Event created'
+          content:
+            application/json:
+              $ref: '#/components/schemas/Event'
         '400':
           description: 'Bad request/Malformed request'
           content:
             application/json:
-              schema: '#/components/schemas/ErrorResponse'
+              $ref: '#/components/schemas/ErrorResponse'
             examples:
               Example 1:
                 value:
@@ -323,12 +340,23 @@ paths:
       operationId: post-event
       tags:
         - Event
-  /event/{eventId}:
+  /events/{eventId}:
+    parameters:
+      - name: eventId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
     get:
       summary: Get an event
       responses:
         '201':
-          description: OK - Event recieved
+          description: OK - Event received
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
         '5XX':
           description: 'Server Error: Something went terribly wrong on our end.'
           content:
@@ -340,6 +368,8 @@ paths:
                   value:
                     error: internal_err
                     message: Something went wrong on our end.
+      tags:
+      - Event
     patch:
       summary: Update an event
       responses:
@@ -356,6 +386,8 @@ paths:
                   value:
                     error: internal_err
                     message: Something went wrong on our end.
+      tags:
+      - Event
     delete:
       summary: Delete an event
       responses:
@@ -372,8 +404,108 @@ paths:
                   value:
                     error: internal_err
                     message: Something went wrong on our end.
+      tags:
+      - Event
+  /events/{eventId}/staff:
+    parameters:
+    - name: eventId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+    get:
+      summary: Get all staff users for an event
+      description: Gets all users with role STAFF or ADMIN
+      responses:
+        '200':
+          description: OK - Return users
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: '#/components/schemas/User'
+        '5XX':
+          description: 'Server Error: Something went terribly wrong on our end.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              examples:
+                Example 1:
+                  value:
+                    error: internal_err
+                    message: Something went wrong on our end.
+      tags:
+        - Event
+      
 components:
   schemas:
+    Event:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        description:
+          type: string
+          nullable: true
+        location:
+          type: string
+          nullable: true
+        location_url:
+          type: string
+          format: uri
+          nullable: true
+        max_attendees:
+          type: integer
+          format: int32
+          nullable: true
+        application_open:
+          type: string
+          format: date-time
+        application_close:
+          type: string
+          format: date-time
+        rsvp_deadline:
+          type: string
+          format: date-time
+          nullable: true
+        decision_release:
+          type: string
+          format: date-time
+          nullable: true
+        start_time:
+          type: string
+          format: date-time
+        end_time:
+          type: string
+          format: date-time
+        website_url:
+          type: string
+          format: uri
+          nullable: true
+        is_published:
+          type: boolean
+          nullable: true
+        created_at:
+          type: string
+          format: date-time
+          nullable: true
+        updated_at:
+          type: string
+          format: date-time
+          nullable: true
+      required:
+        - id
+        - name
+        - application_open
+        - application_close
+        - start_time
+        - end_time
     ErrorResponse:
       title: ErrorResponse
       type: object
@@ -439,6 +571,56 @@ components:
         user_agent:
           type: string
           nullable: true
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: "123e4567-e89b-12d3-a456-426614174000"
+        name:
+          type: string
+          example: "John Doe"
+        email:
+          type: string
+          format: email
+          nullable: true
+          example: "john@example.com"
+        email_verified:
+          type: boolean
+          example: true
+        onboarded:
+          type: boolean
+          example: false
+        image:
+          type: string
+          nullable: true
+          format: uri
+          example: "https://example.com/avatar.jpg"
+        created_at:
+          type: string
+          format: date-time
+          example: "2025-08-08T17:00:00Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2025-08-08T18:00:00Z"
+        role:
+          $ref: '#/components/schemas/UserRole'
+      required:
+        - id
+        - name
+        - email_verified
+        - onboarded
+        - created_at
+        - updated_at
+        - role
+    UserRole:
+      type: string
+      enum:
+        - user
+        - superuser
+      example: user
   securitySchemes:
     sh_session_id:
       type: http
